--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,7 @@ cache:
 addons:
   artifacts:
     s3_region: "us-west-2"
+    debug: true
+    paths:
+      - $HOME/build/main-macosx
+      - $HOME/build/main-linux
