--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ addons:
     s3_region: "us-west-2"
     debug: true
     paths:
-      - $HOME/build/main-macosx
-      - $HOME/build/main-linux
+      - $HOME/build/slopp/proxyrec/build/main-macosx
+      - $HOME/build/slopp/proxyrec/build/main-linux
